--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
     
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">WebHost</a>
+	      <a class="navbar-brand" href="index.html">JupViec</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-	          <li class="nav-item"><a href="domain.html" class="nav-link">Domain</a></li>
-	          <li class="nav-item"><a class="nav-link" href="hosting.html">Hosting</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-	          <li class="nav-item cta"><a href="contact.html" class="nav-link"><span>Get started</span></a></li>
+	          <li class="nav-item active"><a href="index.html" class="nav-link">Trang chủ</a></li>
+	          <li class="nav-item"><a href="about.html" class="nav-link">Giới thiệu</a></li>
+	          <li class="nav-item"><a href="domain.html" class="nav-link">Dịch vụ</a></li>
+	          <li class="nav-item"><a class="nav-link" href="hosting.html">Tìm người</a></li>
+	          <li class="nav-item"><a href="blog.html" class="nav-link">Tìm việc</a></li>
+	          <li class="nav-item"><a href="contact.html" class="nav-link">Liên hệ</a></li>
+	          <li class="nav-item cta"><a href="contact.html" class="nav-link"><span>Bắt đầu</span></a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -57,9 +57,9 @@
           <div class="row slider-text align-items-center" data-scrollax-parent="true">
 
             <div class="col-md-5 wrap col-sm-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-              <h1 class="mb-4 mt-5" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Everything you get what you need to Host your website</h1>
-              <p class="mb-4 mb-md-5 sub-p" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Up to 90% Discount with Free Domain Name Registration</p>
-              <p><a href="#" class="btn btn-primary p-3 px-xl-5 py-xl-3">Get started</a> <a href="#" class="btn btn-primary btn-primary-2 p-3 px-xl-5 py-xl-3">Read more</a></p>
+              <h1 class="mb-4 mt-5" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Dọn dẹp chưa bao giờ dễ dàng đến thế!</h1>
+              <p class="mb-4 mb-md-5 sub-p" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Uy tín đảm bảo chất lượng</p>
+              <p><a href="#" class="btn btn-primary p-3 px-xl-5 py-xl-3">Bắt đầu</a> <a href="#" class="btn btn-primary btn-primary-2 p-3 px-xl-5 py-xl-3">Tìm hiểm thêm</a></p>
             </div>
             <div class="col-md-7 ftco-animate">
             	<img src="images/dashboard_full_1.png" class="img-fluid" alt="">
@@ -75,9 +75,9 @@
           <div class="row slider-text align-items-center" data-scrollax-parent="true">
 
             <div class="col-md-5 wrap col-sm-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-              <h1 class="mb-4 mt-5" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">The Web Hosting Platform Made for You</h1>
-              <p class="mb-4 mb-md-5">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-              <p><a href="#" class="btn btn-primary p-3 px-xl-5 py-xl-3">Get started</a> <a href="#" class="btn btn-primary btn-primary-2 p-3 px-xl-5 py-xl-3">Read more</a></p>
+              <h1 class="mb-4 mt-5" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Khuyến mãi lớn đầu xuân </h1>
+              <p class="mb-4 mb-md-5">Với những ưu đãi hấp dẫn, giá rẻ như cho :))</p>
+              <p><a href="#" class="btn btn-primary p-3 px-xl-5 py-xl-3">Bắt đầu</a> <a href="#" class="btn btn-primary btn-primary-2 p-3 px-xl-5 py-xl-3">Tìm hiểu thêm</a></p>
             </div>
             <div class="col-md-7 ftco-animate">
             	<img src="images/dashboard_full_3.png" class="img-fluid" alt="">
@@ -92,13 +92,13 @@
     	<div class="container">
     		<div class="row d-flex">
     			<div class="col-lg-5 heading-white mb-4 mb-sm-4 mb-lg-0 ftco-animate">
-    				<h2>Search You Domain Name</h2>
-    				<p>A small river named Duden flows by their place</p>
+    				<h2>Nhập Email: </h2>
+    				<p>Để nhận thông tin khuyến mãi!</p>
     			</div>
     			<div class="col-lg-7 ftco-wrap ftco-animate">
     				<form action="#" class="domain-form d-flex">
               <div class="form-group domain-name">
-                <input type="text" class="form-control name px-4" placeholder="Enter your domain name...">
+                <input type="text" class="form-control name px-4" placeholder="abc....@gmail">
               </div>
               <div class="form-group domain-select d-flex">
 	              <div class="select-wrap">
@@ -111,10 +111,10 @@
                     <option value="">.me</option>
                   </select>
                 </div>
-                <input type="submit" class="search-domain btn btn-primary text-center" value="Search">
+                <input type="submit" class="search-domain btn btn-primary text-center" value="Xác nhận">
 	            </div>
             </form>
-            <p class="domain-price mt-2"><span><small>.com</small> $9.75</span> <span><small>.net</small> $9.50</span> <span><small>.biz</small> $8.95</span> <span><small>.co</small> $7.80</span><span><small>.me</small> $7.95</span></p>
+           
     			</div>
     		</div>
     	</div>
