--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
   <head>
     <title>WebHost - Free Bootstrap 4 Template by Colorlib</title>
     <meta charset="utf-8">
@@ -30,7 +30,7 @@
     
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">JupViec</a>
+	      <a class="navbar-brand" href="index.html">JupDiec</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -62,7 +62,7 @@
               <p><a href="#" class="btn btn-primary p-3 px-xl-5 py-xl-3">Bắt đầu</a> <a href="#" class="btn btn-primary btn-primary-2 p-3 px-xl-5 py-xl-3">Tìm hiểm thêm</a></p>
             </div>
             <div class="col-md-7 ftco-animate">
-            	<img src="images/dashboard_full_1.png" class="img-fluid" alt="">
+            	<img src="images/dashboard_full_1.jpg" class="img-fluid" alt="">
             </div>
 
           </div>
@@ -76,11 +76,11 @@
 
             <div class="col-md-5 wrap col-sm-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
               <h1 class="mb-4 mt-5" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Khuyến mãi lớn đầu xuân </h1>
-              <p class="mb-4 mb-md-5">Với những ưu đãi hấp dẫn, giá rẻ như cho :))</p>
+              <p class="mb-4 mb-md-5 sub-p" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Với những ưu đãi hấp dẫn, giá rẻ như cho.</p>
               <p><a href="#" class="btn btn-primary p-3 px-xl-5 py-xl-3">Bắt đầu</a> <a href="#" class="btn btn-primary btn-primary-2 p-3 px-xl-5 py-xl-3">Tìm hiểu thêm</a></p>
             </div>
             <div class="col-md-7 ftco-animate">
-            	<img src="images/dashboard_full_3.png" class="img-fluid" alt="">
+            	<img src="images/dashboard_full_3.jpg" class="img-fluid" alt="">
             </div>
 
           </div>
@@ -93,15 +93,15 @@
     		<div class="row d-flex">
     			<div class="col-lg-5 heading-white mb-4 mb-sm-4 mb-lg-0 ftco-animate">
     				<h2>Nhập Email: </h2>
-    				<p>Để nhận thông tin khuyến mãi!</p>
+    				<p class="mb-4 mb-md-5 sub-p" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Để nhận thông tin khuyến mãi!</p>
     			</div>
     			<div class="col-lg-7 ftco-wrap ftco-animate">
     				<form action="#" class="domain-form d-flex">
               <div class="form-group domain-name">
-                <input type="text" class="form-control name px-4" placeholder="abc....@gmail">
+                <input type="text" class="form-control name px-4" placeholder="jupviec123@gmail.com">
               </div>
               <div class="form-group domain-select d-flex">
-	              <div class="select-wrap">
+	              <!-- <div class="select-wrap">
                   <div class="icon"><span class="ion-ios-arrow-down"></span></div>
                   <select name="" id="" class="form-control">
                   	<option value="">.com</option>
@@ -110,7 +110,7 @@
                     <option value="">.co</option>
                     <option value="">.me</option>
                   </select>
-                </div>
+                </div> -->
                 <input type="submit" class="search-domain btn btn-primary text-center" value="Xác nhận">
 	            </div>
             </form>
@@ -215,7 +215,7 @@
     	<div class="container">
     		<div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center heading-section heading-section-white ftco-animate">
-            <span class="subheading">More than 100,000 websites hosted</span>
+            <span class="subheading">Hỗ trợ hơn 1000 hộ gia đình</span>
           </div>
         </div>
     		<div class="row justify-content-center">
@@ -224,8 +224,8 @@
 		          <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18 text-center">
 		              <div class="text">
-		                <strong class="number" data-number="2000">0</strong>
-		                <span>CMS Installation</span>
+		                <strong class="number" data-number="200">0</strong>
+		                <span>Nhân viên</span>
 		              </div>
 		            </div>
 		          </div>
@@ -233,7 +233,7 @@
 		            <div class="block-18 text-center">
 		              <div class="text">
 		                <strong class="number" data-number="100">0</strong>
-		                <span>Awards Won</span>
+		                <span>Trang thiết bị hiện đại</span>
 		              </div>
 		            </div>
 		          </div>
@@ -241,15 +241,15 @@
 		            <div class="block-18 text-center">
 		              <div class="text">
 		                <strong class="number" data-number="32000">0</strong>
-		                <span>Registered Domains</span>
+		                <span>Lượt truy cập</span>
 		              </div>
 		            </div>
 		          </div>
 		          <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18 text-center">
 		              <div class="text">
-		                <strong class="number" data-number="31998">0</strong>
-		                <span>Satisfied Customers</span>
+		                <strong class="number" data-number="568">0</strong>
+		                <span>Lượt đánh giá</span>
 		              </div>
 		            </div>
 		          </div>
@@ -259,7 +259,7 @@
     	</div>
     </section>
 
-    <section class="ftco-section bg-light">
+    <!-- <section class="ftco-section bg-light">
     	<div class="container">
     		<div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 text-center heading-section ftco-animate">
@@ -342,7 +342,7 @@
 	        </div>
 	      </div>
     	</div>
-    </section>
+    </section> -->
 		
 		<section class="ftco-services">
 			<div class="container-wrap">
@@ -513,7 +513,7 @@
       </div>
     </section>
 
-    <section class="ftco-section">
+    <!-- <section class="ftco-section">
     	<div class="container">
     		<div class="row justify-content-center mb-5 pb-5">
     			<div class="col-md-7 text-center heading-section ftco-animate">
@@ -577,9 +577,9 @@
           </div>
         </div>
     	</div>
-    </section>
+    </section> -->
 
-    <section class="ftco-section ftco-partner">
+    <!-- <section class="ftco-section ftco-partner">
     	<div class="container">
     		<div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 text-center heading-section heading-section-white ftco-animate">
@@ -605,9 +605,9 @@
     			</div>
     		</div>
     	</div>
-    </section>
+    </section> -->
 
-    <section class="ftco-section bg-light">
+    <!-- <section class="ftco-section bg-light">
       <div class="container">
         <div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 text-center heading-section ftco-animate">
@@ -666,7 +666,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <footer class="ftco-footer ftco-bg-dark ftco-section">
       <div class="container">
