--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     	</div>
     </section>
   
-    <section class="ftco-section services-section bg-light">
+    <!-- <section class="ftco-section services-section bg-light">
       <div class="container">
       	<div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 text-center heading-section ftco-animate">
@@ -209,7 +209,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section class="ftco-section ftco-counter img" id="section-counter" style="background-image: url(images/bg_1.jpg);" data-stellar-background-ratio="0.5">
     	<div class="container">
