--- a/index.html
+++ b/index.html
@@ -355,8 +355,8 @@
 					<div class="col-lg-7">
 						<div class="services-wrap p-4 p-md-5">
       				<div class="heading-section mb-5 ftco-animate">
-		            <h2 class="mb-2">Why Choose Us?</h2>
-		            <span class="subheading">Peoples Choice WebHost The Best Web Hosting</span>
+		            <h2 class="mb-2">Tại sao lại là JupDiec.vn</h2>
+		            <span class="subheading">Xây dựng dựa trên nhu cầu người dùng</span>
 		          </div>
       				<div class="d-md-flex">
       					<div class="one-half mr-4">
@@ -365,8 +365,8 @@
 		      						<span class="flaticon-cloud-computing"></span>
 		      					</div>
 		      					<div class="text pl-4 pl-sm-0 pr-md-4 text-md-right">
-			      					<h3>Free Domain Transfer</h3>
-			      					<p>Far far away, behind the word mountains, far from the countries Vokalia</p>
+			      					<h3>Hệ thống tân tiến</h3>
+			      					<p>Để người giúp việc và người cần giúp việc gần nhau nhất.</p>
 		      					</div>
 		      				</div>
 		      				<div class="list-services d-flex ftco-animate">
@@ -374,8 +374,8 @@
 		      						<span class="flaticon-bandwidth"></span>
 		      					</div>
 		      					<div class="text pl-4 pl-sm-0 pr-md-4 text-md-right">
-			      					<h3>Unlimited BandWidth</h3>
-			      					<p>Far far away, behind the word mountains, far from the countries Vokalia</p>
+			      					<h3>Không giới hạn thời gian</h3>
+			      					<p>Tuỳ vào không gian và yêu cầu, thời gian sẽ luôn dư giả.</p>
 		      					</div>
 		      				</div>
 		      				<div class="list-services d-flex ftco-animate">
@@ -383,8 +383,8 @@
 		      						<span class="flaticon-shield"></span>
 		      					</div>
 		      					<div class="text pl-4 pl-sm-0 pr-md-4 text-md-right">
-			      					<h3>Security</h3>
-			      					<p>Far far away, behind the word mountains, far from the countries Vokalia</p>
+			      					<h3>Đảm bảo</h3>
+			      					<p>Cam kết an toàn, không lo kẻ gian.</p>
 		      					</div>
 		      				</div>
       					</div>
@@ -395,8 +395,8 @@
 		      						<span class="flaticon-guarantee"></span>
 		      					</div>
 		      					<div class="text pl-4 pl-sm-0 pl-md-4">
-			      					<h3>99% Uptime</h3>
-			      					<p>Far far away, behind the word mountains, far from the countries Vokalia</p>
+			      					<h3>Chẩt lượng</h3>
+			      					<p>Đảm bảo kết quả như mong đợi.</p>
 		      					</div>
 		      				</div>
 		      				<div class="list-services d-flex ftco-animate">
@@ -404,8 +404,8 @@
 		      						<span class="flaticon-settings"></span>
 		      					</div>
 		      					<div class="text pl-4 pl-sm-0 pl-md-4">
-			      					<h3>Free Website Optimization</h3>
-			      					<p>Far far away, behind the word mountains, far from the countries Vokalia</p>
+			      					<h3>Thiết bị</h3>
+			      					<p>Hỗ trợ thiết bị tối tân, phục vụ tốt nhất.</p>
 		      					</div>
 		      				</div>
 		      				<div class="list-services d-flex ftco-animate">
@@ -413,8 +413,8 @@
 		      						<span class="flaticon-support"></span>
 		      					</div>
 		      					<div class="text pl-4 pl-sm-0 pl-md-4">
-			      					<h3>24/7 Tech Support</h3>
-			      					<p>Far far away, behind the word mountains, far from the countries Vokalia</p>
+			      					<h3>24/7</h3>
+			      					<p>Không chỉ là dọn dẹp, còn là phục vụ.</p>
 		      					</div>
 		      				</div>
       					</div>
