--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 						<div class="services-wrap p-4 p-md-5">
       				<div class="heading-section mb-5 ftco-animate">
 		            <h2 class="mb-2">Tại sao lại là JupDiec.vn</h2>
-		            <span class="subheading">Xây dựng dựa trên nhu cầu người dùng</span>
+		            <p class="mb-4 mb-md-5 sub-p" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Xây dựng dựa trên nhu cầu người dùng</p>
 		          </div>
       				<div class="d-md-flex">
       					<div class="one-half mr-4">
@@ -366,7 +366,7 @@
 		      					</div>
 		      					<div class="text pl-4 pl-sm-0 pr-md-4 text-md-right">
 			      					<h3>Hệ thống tân tiến</h3>
-			      					<p>Để người giúp việc và người cần giúp việc gần nhau nhất.</p>
+			      					<pre>Để người giúp việc và người </br> cần giúp việc gần nhau nhất.</pre>
 		      					</div>
 		      				</div>
 		      				<div class="list-services d-flex ftco-animate">
@@ -375,7 +375,7 @@
 		      					</div>
 		      					<div class="text pl-4 pl-sm-0 pr-md-4 text-md-right">
 			      					<h3>Không giới hạn thời gian</h3>
-			      					<p>Tuỳ vào không gian và yêu cầu, thời gian sẽ luôn dư giả.</p>
+			      					<pre>Tuỳ vào không gian và yêu cầu,</br> thời gian sẽ luôn dư giả.</pre>
 		      					</div>
 		      				</div>
 		      				<div class="list-services d-flex ftco-animate">
@@ -384,7 +384,7 @@
 		      					</div>
 		      					<div class="text pl-4 pl-sm-0 pr-md-4 text-md-right">
 			      					<h3>Đảm bảo</h3>
-			      					<p>Cam kết an toàn, không lo kẻ gian.</p>
+			      					<pre>Cam kết an toàn, </br> không lo kẻ gian.</pre>
 		      					</div>
 		      				</div>
       					</div>
@@ -396,7 +396,7 @@
 		      					</div>
 		      					<div class="text pl-4 pl-sm-0 pl-md-4">
 			      					<h3>Chẩt lượng</h3>
-			      					<p>Đảm bảo kết quả như mong đợi.</p>
+			      					<pre>Đảm bảo kết quả </br> như mong đợi.</pre>
 		      					</div>
 		      				</div>
 		      				<div class="list-services d-flex ftco-animate">
@@ -405,7 +405,7 @@
 		      					</div>
 		      					<div class="text pl-4 pl-sm-0 pl-md-4">
 			      					<h3>Thiết bị</h3>
-			      					<p>Hỗ trợ thiết bị tối tân, phục vụ tốt nhất.</p>
+			      					<pre>Hỗ trợ thiết bị tối tân,</br> phục vụ tốt nhất.</pre>
 		      					</div>
 		      				</div>
 		      				<div class="list-services d-flex ftco-animate">
@@ -414,7 +414,7 @@
 		      					</div>
 		      					<div class="text pl-4 pl-sm-0 pl-md-4">
 			      					<h3>24/7</h3>
-			      					<p>Không chỉ là dọn dẹp, còn là phục vụ.</p>
+			      					<pre>Không chỉ là dọn dẹp,</br> còn là phục vụ.</pre>
 		      					</div>
 		      				</div>
       					</div>
@@ -673,7 +673,7 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">WebHost</h2>
+              <h2 class="ftco-heading-2">JupDiec</h2>
               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
