--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">JupDiec</a>
+	      <a class="navbar-brand" href="index.html">ZupDiec</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -355,7 +355,7 @@
 					<div class="col-lg-7">
 						<div class="services-wrap p-4 p-md-5">
       				<div class="heading-section mb-5 ftco-animate">
-		            <h2 class="mb-2">Tại sao lại là JupDiec.vn</h2>
+		            <h2 class="mb-2">Tại sao lại là ZupDiec.vn</h2>
 		            <p class="mb-4 mb-md-5 sub-p" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Xây dựng dựa trên nhu cầu người dùng</p>
 		          </div>
       				<div class="d-md-flex">
@@ -673,8 +673,8 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">JupDiec</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <h2 class="ftco-heading-2">ZupDiec</h2>
+              <p></p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
