--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                     </span>
                   </div>
                   <div class="text">
-                    <p class="mb-5">Hoàn hảo, mọi thứ trở nên ngăn nắp đến kì lạ </p>
+                    <p class="mb-5">Hoàn hảo, mọi thứ trở nên ngăn nắp đến kì lạ. Tôi sẽ tiếp tục sử dụng dịch vụ. </p>
                     <p class="name">Anh Trần Đình Quân</p>
                     <span class="position">Quận 9</span>
                   </div>
