--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <li class="nav-item"><a href="domain.html" class="nav-link">Dịch vụ</a></li>
           <li class="nav-item"><a class="nav-link" href="hosting.html">Tuyển dụng</a></li>
           <li class="nav-item"><a href="blog.html" class="nav-link">Khuyến Mãi</a></li>
-          <li class="nav-item"><a href="contact.html" class="nav-link">Phản hồi/a></li>
+          <li class="nav-item"><a href="contact.html" class="nav-link">Phản hồi</a></li>
           <li class="nav-item cta"><a href="contact.html" class="nav-link"><span>Đăng ký</span></a></li>
         </ul>
       </div>
@@ -56,7 +56,7 @@
 
   <section class="home-slider owl-carousel">
     <div class="slider-item" style="background-image: url(images/bg_1.jpg);">
-      <div class="overlay"></div>
+     
       <div class="container-fluid">
         <div class="row slider-text align-items-center" data-scrollax-parent="true">
 
